tests/ui/impl-trait/non-defining-uses/as-projection-term.next.stderr
error[E0792]: expected generic lifetime parameter, found `'_`
  --> $DIR/as-projection-term.rs:14:19
   |
LL | fn recur<'a>() -> impl Sized + 'a {
   |                                -- this generic parameter must be used with a generic lifetime parameter
...
LL |     prove_proj(|| recur());
   |                   ^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0792`.
